--- a/index.html
+++ b/index.html
@@ -4,5 +4,10 @@
 
 <body>
   <script src = "lib/three.js"></script>
+  <script src = "lib/jquery.js"></script>
+  <script src = "lib/OrbitControls.js"></script>
+  <script src = "lib/ShaderLoader.js"></script>
+
+  <script src = "js/earth.js"></script>
   <script src = "js/main.js"></script>
 </body>
