two random points on map

--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
   <script src = "lib/jquery.js"></script>
   <script src = "lib/OrbitControls.js"></script>
   <script src = "lib/ShaderLoader.js"></script>
+  <script src = "lib/tween.js"></script>
+  <script src = "lib/underscore.js"></script>
 
   <script src = "js/earth.js"></script>
+  <script src = "js/FakeDataServer.js"></script>
   <script src = "js/main.js"></script>
 </body>
