--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <script src = "lib/ShaderLoader.js"></script>
   <script src = "lib/tween.js"></script>
   <script src = "lib/underscore.js"></script>
+  <script src = "lib/ShaderParticles.js"></script>
+  <script src = "lib/dat.gui.js"></script>
+  <script src = "lib/stats.js"></script>
 
   <script src = "js/earth.js"></script>
   <script src = "js/FakeDataServer.js"></script>
