--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <script src = "lib/stats.js"></script>
 
   <script src = "js/earth.js"></script>
+  <script src = "js/light.js"></script>
   <script src = "js/FakeDataServer.js"></script>
   <script src = "js/main.js"></script>
 </body>
