--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
   <script src = "lib/dat.gui.js"></script>
   <script src = "lib/stats.js"></script>
 
+  <script src="postprocessing/EffectComposer.js"></script>
+  <script src="postprocessing/ConvolutionShader.js"></script>
+  <script src="postprocessing/CopyShader.js"></script>
+  <script src="postprocessing/FXAAShader.js"></script>
+  <script src="postprocessing/MaskPass.js"></script>
+  <script src="postprocessing/RenderPass.js"></script>
+  <script src="postprocessing/ShaderPass.js"></script>
+  <script src="postprocessing/BloomPass.js"></script>
+
   <script src = "js/earth.js"></script>
   <script src = "js/light.js"></script>
   <script src = "js/FakeDataServer.js"></script>
