--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 </head>
 
 <body>
+  
+  <div id = "GUI"></div>
+  <div id = "glCanvasContainer"></div>
+
   <script src = "lib/three.js"></script>
   <script src = "lib/jquery.js"></script>
   <script src = "lib/OrbitControls.js"></script>
