--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
   <script src="postprocessing/BloomPass.js"></script>
 
   <script src = "js/earth.js"></script>
+  <script src = "js/constants.js"></script>
   <script src = "js/light.js"></script>
   <script src = "js/FakeDataServer.js"></script>
+  <script src = "js/stars.js"></script>
   <script src = "js/main.js"></script>
 </body>
