--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <script src = "lib/ShaderParticles.js"></script>
   <script src = "lib/dat.gui.js"></script>
   <script src = "lib/stats.js"></script>
+  <script src = "lib/TextCreator.js"></script>
 
   <script src="postprocessing/EffectComposer.js"></script>
   <script src="postprocessing/ConvolutionShader.js"></script>
