--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <script src = "lib/dat.gui.js"></script>
   <script src = "lib/stats.js"></script>
   <script src = "lib/TextCreator.js"></script>
+  <script src = "lib/ObjectControls.js"></script>
 
   <script src="postprocessing/EffectComposer.js"></script>
   <script src="postprocessing/ConvolutionShader.js"></script>
