see continents on other side

--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
   <script src="postprocessing/ShaderPass.js"></script>
   <script src="postprocessing/BloomPass.js"></script>
 
-  <script src = "js/earth.js"></script>
   <script src = "js/constants.js"></script>
+  <script src = "js/earth.js"></script>
+  <script src = "js/testEarth.js"></script>
   <script src = "js/light.js"></script>
   <script src = "js/FakeDataServer.js"></script>
   <script src = "js/stars.js"></script>
